[package]
name = "dyn-raymarcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.0"
vecmath = "1.0.0"
spin_sleep = "1.1.1"
modular = "1.0.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["ttf","image","gfx","mixer"]
